# vulkan_rote_memory_test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  reference_CMakeLists.txt  reference_CMakeLists_w_shaders.txt  test.cpp
.obsidian/: app.json  appearance.json  hotkeys.json  workspace.json
.obsidian/plugins/code-files/: data.json
.obsidian/snippets/: andi_custom_styles.css
lib/snippets/: ascii_colors.h  io_macros.h  useful_functions.h  vulkan_io.h
notes/: renderpass - stages - painter analogy.md  renderpass - video notes - vulkan developer day (montreal) - render passes in vulkan.md  shaders - vertex input - binding vs attributes.md  subpass - attachments - notes.md  subpass - dependency - about dependencies.md  subpass - dependency - insights.md  subpass - dependency - srcSubpass.md
shaders/test/: interpolate_color.frag
src/examples/1_setup/1_window/: notes.md  run.cpp
src/examples/1_setup/2_instance/: notes.md  run.cpp
src/examples/1_setup/3_validation_layers/: run.cpp
src/examples/1_setup/4_physical_device/: _practice.cpp  run.cpp
src/examples/1_setup/5_device/: _practice.cpp  run.cpp
src/examples/1_triangle/: notes.md
src/examples/1_triangle/01_window/: run.cpp
src/examples/1_triangle/02_instance/: run.cpp
src/examples/1_triangle/03_validation_layers/: _practice.cpp  run.cpp
src/examples/1_triangle/04_physical_device/: run.cpp
src/examples/1_triangle/05_device/: run.cpp
src/examples/1_triangle/06_window_surface/: _practice.cpp  enum_names.h  run.cpp
src/examples/1_triangle/07_swapchain/: _practice.cpp  run.cpp
src/examples/1_triangle/08_image_views/: run.cpp
src/examples/1_triangle/09_shaders/: notes.md  run.cpp
src/examples/2_presentation/1_window_surface/: _practice.cpp  notes.md  run.cpp
src/examples/2_presentation/2_swapchain/: notes.md  run.cpp
src/examples/2_presentation/3_image_views/: notes.md  run.cpp
src/examples/3_pipeline/2_render_pass/: run.cpp
src/examples/3_pipeline/3_pipeline/: run.cpp
src/examples/4_render/3_draw/: run.cpp
src/examples/setup/device/: _practice.cpp  run.cpp
src/examples/setup/instance/: run.cpp
src/examples/setup/physical_device/: run.cpp
src/examples/setup/validation_layers/: base.cpp  min_run.cpp  notes.md  run.cpp
